[gd_scene load_steps=2 format=3 uid="uid://cpeu77xixiu42"]

[ext_resource type="Script" uid="uid://d3g2p21ar8p50" path="res://scenes/ui/ConfirmationDialog.gd" id="1_confirmation"]

[node name="ConfirmationDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_confirmation")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogBox" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DialogBox"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DialogBox/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="CenterContainer_DialogBox_VBoxContainer#TitleLabel" type="Label" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm Action"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer_DialogBox_VBoxContainer#MessageLabel" type="Label" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Are you sure you want to proceed?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CenterContainer_DialogBox_VBoxContainer#HSeparator" type="HSeparator" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CenterContainer_DialogBox_VBoxContainer#ButtonContainer" type="HBoxContainer" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="CenterContainer_DialogBox_VBoxContainer_ButtonContainer#ConfirmButton" type="Button" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer/CenterContainer_DialogBox_VBoxContainer#ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Confirm"

[node name="CenterContainer_DialogBox_VBoxContainer_ButtonContainer#CancelButton" type="Button" parent="CenterContainer/DialogBox/MarginContainer/VBoxContainer/CenterContainer_DialogBox_VBoxContainer#ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"
